--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-input-slider": "^6.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-slideshow-image": "^3.4.7",
+    "uuid": "^8.3.2",
+    "uuid4": "^2.0.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
